# android_device_qcom_common

./: Android.mk  AndroidBoard.mk  AndroidProducts.mk  BoardConfig.mk  Makefile.am  POLARIS.mk  POLARIS.txt  README.md  android.hardware.location.gps.xml  base.mk  bdroid_buildcfg.h  checklist_appops.xml  common.mk  common64.mk  config.fs  configure.ac  generate_extra_images.mk  gps.conf  mixer_paths_wcd9326.xml  privapp-permissions-qti.xml  qti_whitelist.xml  releasetools.py  sec_config  system.prop  utils.mk  vendor_framework_compatibility_matrix.xml  vendor_hal_makefile_generator.sh  vendorsetup.sh  whitelist_appops.xml
cryptfs_hw/: Android.mk  Makefile.am  configure.ac  cryptfs_hw.c  cryptfs_hw.h  cryptfs_hw_gvm.c  fde_fe.c  fde_fe.h  habmm.h  libcryptfs_hw.pc.in  uhab.c
device/overlay/frameworks/base/core/res/res/values/: config.xml  themes.xml  themes_material.xml  themes_micro.xml
device/overlay/frameworks/base/core/res/res/values-mcc310-mnc260/: config.xml
device/overlay/frameworks/base/core/res/res/values-mcc311-mnc480/: config.xml
device/overlay/frameworks/base/core/res/res/values-mcc405-mnc855/: config.xml
device/overlay/frameworks/base/core/res/res/values-mcc405-mnc864/: strings.xml
device/overlay/frameworks/base/core/res/res/values-mcc405-mnc866/: strings.xml
device/overlay/frameworks/base/core/res/res/values-mcc405-mnc868/: config.xml
device/overlay/frameworks/base/core/res/res/values-mcc460-mnc00/: config.xml  strings.xml
device/overlay/frameworks/base/core/res/res/values-mcc460-mnc03/: config.xml
device/overlay/frameworks/base/core/res/res/values-mcc460-mnc08/: config.xml
device/overlay/frameworks/base/core/res/res/xml/: storage_list.xml
display/logo/: Android.mk  logo_gen.py  readme.txt  splash.img
display/reg_dump/: mdss_regdump.py  module_conf.xml  readme.txt
display/tools/: parser.pl
dlkm/: AndroidKernelModule.mk
dtbtool/: Makefile.am  configure.ac  dtbtool.c  dtbtool.txt
healthd/: Android.mk  healthd_board_msm.cpp
init/: Android.mk  init_msm.c  init_msm.h  init_msm8226.c  init_msm8909.c  init_msm8916.c  init_msm8952.c  init_msm8994.c
media/: media_codecs.xml  media_profiles.xml
mkdevtbl/: Android.mk  mkdevtbl.c
overlay/frameworks/base/core/res/res/layout/: keyguard_status_view.xml
overlay/frameworks/base/core/res/res/values/: config.xml  dimens.xml  symbols.xml
overlay/frameworks/base/core/res/res/values-sw600dp/: dimens.xml
overlay/frameworks/base/core/res/res/values-sw720dp/: dimens.xml
overlay/frameworks/base/core/res/res/xml/: storage_list.xml
power/: Android.mk  Makefile.am  configure.ac  performance.h  power-710.c  power-8909.c  power-8952.c  power-8953.c  power-8974.c  power-common.h  power.c  utils.c  utils.h
product/overlay/frameworks/base/core/res/res/values/: config.xml
recovery/miniui/: qcom_recovery_ui.c
recovery/notifier/: Android.mk  leds.c
recovery/oem-recovery/: Android.mk  Makefile.am  dec.c  gpt-utils.c  gpt-utils.cpp  gpt-utils.h  oem-updater.c  oem-updater.cpp
rootdir/: Android.mk  tests.txt
rootdir/etc/: hsic.control.bt.sh  init.ath3k.bt.sh  init.class_main.sh  init.mdm.sh  init.msm.usb.configfs.rc  init.msmirqbalance.sh  init.qcom.audio.sh  init.qcom.bt.sh  init.qcom.btdun.sh  init.qcom.class_core.sh  init.qcom.class_main.sh  init.qcom.debug-8976.sh  init.qcom.debug-sdm660.sh  init.qcom.debug-sdm670.sh  init.qcom.debug-sdm710.sh  init.qcom.debug.sh  init.qcom.early_boot.sh  init.qcom.factory.rc  init.qcom.factory.sh  init.qcom.post_boot.sh  init.qcom.post_fs.sh  init.qcom.rc  init.qcom.ril.sh  init.qcom.setup_completed.sh  init.qcom.sh  init.qcom.syspart_fixup.sh  init.qcom.syspart_fixup_modem_links.sh  init.qcom.test.rc  init.qcom.testscripts.sh  init.qcom.uicc.sh  init.qcom.unicorn-dpi.sh  init.qcom.usb.rc  init.qcom.usb.sh  init.qcom.wifi.rps.sh  init.qcom.wifi.sh  init.qcom.wifi.unload.sh  init.qcom.zram.sh  init.qti.can.sh  init.qti.debug-bengal.sh  init.qti.debug-kona.sh  (+7 more)
thermal-engine/: Android.mk
tools/: create_vendor_folder.py
vndk/: vndk-sp-libs.mk
